@@ -1,7 +1,10 @@
 Release Note
 
+* 6/25/2014
+  * added support for multiple consumers
+
 * 6/20/2014
-  * fixed for pre-pro
+  * fixed for pre-processing
 
 * 6/11/2014
   * added templates for cron and logrotate
